Update package json for deploy

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "name": "smbot",
   "scripts": {
   },
+  "repository": "https://github.com/dragonathongmail/smbot",
   "env": {
   },
   "formation": {
