--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "hapibotosc",
-  "version": "1.0.0",
-  "description": "",
+  "name": "node-js-getting-started",
+  "version": "0.2.6",
+  "description": "A sample Node.js app using Express 4",
+  "engines": {
+    "node": "6.11.1"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node test.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "hapi": "^16.6.2",
-    "hapi-require-https": "^2.1.0"
+    "ejs": "2.5.6",
+    "express": "4.15.2"
+  },
+  "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
   },
   "keywords": [
-    "example",
-    "heroku"
-  ]
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
