--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "ejs": "2.5.6",
     "express": "4.15.2",
-    "hapi": "^16.6.2"
+    "hapi": "^16.6.2",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
